different attempts to solve medium view port
tried different css to try and solve medium view not lining up 50/50

--- a/Assignment_02/main.css
+++ b/Assignment_02/main.css
@@ -4,7 +4,7 @@ body{
 .container{
     min-height: 300px;
     background-color: #63ADF2;
-    margin: 40px auto;
+    margin: 40px;
     width: 300px;
     padding: 30px 20px;
     border-radius: 17px;
