--- a/Assignment_03/main.css
+++ b/Assignment_03/main.css
@@ -4,21 +4,30 @@
 body{
     margin: 0px;
 }
+
 .container{
-    min-height: 300px;
     background-color: #63ADF2;
-    margin: 40px auto;
-    width: 300px;
-    padding: 30px 20px;
     border-radius: 17px;
     border: 7px solid #181e20;
     text-align: center;
     font-size: 30px;
+    margin: 40px auto;
 }
 
 .container img{
     width: 75%; 
     padding: 8px;
+}
+
+.floater-section{
+    float: left;
+    width: 100%;
+    min-height: 200px;
+    margin-bottom: 20px;
+}
+
+.clearfix{
+    clear: both;
 }
 
 nav.navbar{
@@ -60,6 +69,8 @@ h2{
 h1{
     margin-top: 10px;
     font-family: 'Boogaloo', cursive;
+    font-size: 80px;
+    margin: 30px auto;
 }
 
 p{
@@ -69,16 +80,29 @@ p{
     font-family: 'Neucha', cursive;
 }
 
-@media(min-width: 540px){
-    .container{
-        width: 450px;
+/*----------SMALL SCREENS----------*/
+@media(min-width: 450px){
+    .small-width-25{
+        width: 25%;
+    }
+
+    .small-width-33{
+        width: 33.3333%;
+    }
+
+    .small-width-50{
+        width: 50%;
+    }
+
+    .small-width-100{
+        width: 100%;
     }
 }
+
+/*----------MEDIUM SCREENS----------*/
 @media(min-width: 768px){
     .container{
         background-color: #AB9DF0;
-        width: 685px;
-        margin: 30px auto;
     }  
 
     .active-link{
@@ -89,11 +113,43 @@ p{
         display: inline-block;
         padding: 0px 20px;
     }
+
+    .medium-width-25{
+        width: 25%;
+    }
+
+    .medium-width-33{
+        width: 33.3333%;
+    }
+
+    .medium-width-50{
+        width: 50%;
+    }
+
+    .medium-width-100{
+        width: 100%;
+    }
 }
 
+/*----------LARGE SCREENS----------*/
 @media(min-width: 992px){
     .container{
         background-color: #1FB5E2;
-        width: 960px;
+    }
+
+    .large-width-25{
+        width: 25%;
+    }
+
+    .large-width-33{
+        width: 33.3333%;
+    }
+
+    .large-width-50{
+        width: 50%;
+    }
+
+    .large-width-100{
+        width: 100%;
     }
 }
